--- a/SRC/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/SRC/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -44,8 +44,14 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Exclude, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Exclude, new { @class = "form-control" })
+                @*@Html.LabelFor(m => m.Exclude, new { @class = "control-label" })*@
+                @*@Html.TextBoxFor(m => m.Exclude, new { @class = "form-control" })*@
+                <div class="checkbox">
+                    <label>
+                        @Html.CheckBoxFor(m => m.Exclude)
+                        @Html.DisplayNameFor(m => m.Exclude)
+                    </label>
+                </div>
             </div>
 
         </div>
